made about me and work labels line up when resizing window. Also fixed alignement issues with about me p elements.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ h2 {
 
 main {
     background-color: var(#ededf6);
-    margin: 0 2em;
+    margin: 0 5em 0 3em;
 }
 
 .main-banner {
@@ -103,7 +103,6 @@ main {
 }
 
 .labels-left {
-    margin-left: 5em;
     font-size: 5em;
     text-align: right;
     
@@ -112,13 +111,14 @@ main {
     
 }
 
-.about-me-left {
-    border-right: 0.07em solid var(--label-color);
+.about-me-label {
+    border-right: 5px solid var(--label-color);
+    margin-left: 100px;
 }
 
 .about-me-right {
     font-size: 1.5em;
-    margin: 0 5em 0em 2em;
+    margin-left: 2em;
     line-height: 1.4em;
     color: var(--text-color);
     
@@ -134,11 +134,12 @@ main {
 }
 
 .work-label {
-    border-right: 0.35em solid var(--label-color);
+    border-right: 5px solid var(--label-color);
+    margin-left: 130px;
 }
 
 .work-header{
-    margin-left: 5.38em;
+    /* margin-left: 5.38em; */
 }
 
 .work-images {
@@ -148,7 +149,7 @@ main {
 #big-image {
     width: 100%;
     height: 50vh;
-    
+    border: 5px solid var(--main-lightblue);
     background-position: center;
     background-size: cover;
     background-image: url(../images/02-portfolio-4.jpg);
